--- a/Test.html
+++ b/Test.html
@@ -3,19 +3,24 @@
         <title>Test</title>
         <meta charset="utf-8"/>
         <!-- Ennj -->
+        <script type="text/javascript" src="src/Logger.js"></script>
+        <script>logger.setLevel(logger.level.all);</script>
         <script type="text/javascript" src="src/Module.js"></script>
         <script type="text/javascript" src="src/Core.js"></script>
         <script type="text/javascript" src="src/Class.js"></script>
         <script type="text/javascript" src="src/Loader.js"></script>
         <script type="text/javascript" src="src/Game.js"></script>
         <script type="text/javascript" src="src/State.js"></script>
-        <script type="text/javascript" src="src/Vector.js"></script>
+        <script type="text/javascript" src="src/Image.js"></script>
         <script type="text/javascript" src="src/Input.js"></script>
-        <script type="text/javascript" src="src/Logger.js"></script>
+        <script type="text/javascript" src="src/Key.js"></script>
+        <script type="text/javascript" src="src/Mouse.js"></script>
+        <script type="text/javascript" src="src/Vector.js"></script>
         <!-- Game -->
         <script type="text/javascript" src="test/Main.js"></script>
         <script type="text/javascript" src="test/TestLoader.js"></script>
         <script type="text/javascript" src="test/Test.js"></script>
+        <script type="text/javascript" src="test/level/Level1.js"></script>
         <!-- Style -->
         <style>
             body {
