--- a/Test.html
+++ b/Test.html
@@ -3,6 +3,7 @@
         <title>Test</title>
         <meta charset="utf-8"/>
         <!-- Ennj -->
+        <!-- <script type="text/javascript" src="build/ennj.js"></script> -->
         <script type="text/javascript" src="src/Logger.js"></script>
         <script>logger.setLevel(logger.level.all);</script>
         <script type="text/javascript" src="src/Module.js"></script>
@@ -15,6 +16,7 @@
         <script type="text/javascript" src="src/Input.js"></script>
         <script type="text/javascript" src="src/Key.js"></script>
         <script type="text/javascript" src="src/Mouse.js"></script>
+        <script type="text/javascript" src="src/Joy.js"></script>
         <script type="text/javascript" src="src/Vector.js"></script>
         <!-- Game -->
         <script type="text/javascript" src="test/Main.js"></script>
