feat(core): Updates

--- a/Test.html
+++ b/Test.html
@@ -3,7 +3,7 @@
         <title>Test</title>
         <meta charset="utf-8"/>
         <!-- Ennj -->
-        <!-- <script type="text/javascript" src="build/ennj.js"></script> -->
+        <script type="text/javascript" src="src/UUID.js"></script>
         <script type="text/javascript" src="src/Logger.js"></script>
         <script>logger.setLevel(logger.level.all);</script>
         <script type="text/javascript" src="src/Module.js"></script>
@@ -13,6 +13,7 @@
         <script type="text/javascript" src="src/Game.js"></script>
         <script type="text/javascript" src="src/State.js"></script>
         <script type="text/javascript" src="src/Image.js"></script>
+        <script type="text/javascript" src="src/Sheet.js"></script>
         <script type="text/javascript" src="src/Input.js"></script>
         <script type="text/javascript" src="src/Key.js"></script>
         <script type="text/javascript" src="src/Mouse.js"></script>
